2007-05-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/text-render.c:
	Fixed bug #352253 (scrolling behaviour of the viewer)

2007-05-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/useractions.cc:
	Added <win> modifier for winkey
	Added added aliases <mod1> and <mod4>
	for respectively <alt> and <win> modifiers

2007-05-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.c:
	Added 'help' button to file-props dlg

2007-05-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-user-actions.cc:
	Yet another fix for diff tool

	* plugins/python/Makefile.am:
	* plugins/python/sha1sum/Makefile.am:
	* plugins/python/sha1sum/sha1sum.py:
	Addded SHA-1 plugin

2007-05-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/data.cc:
	gdk_key_names.add(...) --> load_data (gdk_key_names, ...)

2007-04-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/widget-factory.cc:
	* src/widget-factory.h:
	Inline create_clist_combo() function, remove widget-factory.cc

2007-04-28  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-plain-path.cc:
	Fixed bug #360175 (crash while entering a dir with %)

2007-04-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added "no.action" to user actions

2007-04-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/dirlist.cc:
	i18 of progress bar message

	* src/gnome-cmd-file-popmenu.cc:
	Fixed crash when right clicking on any file.

2007-04-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/dict.h:
	More generalized version of DICT<> class

2007-04-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	Set default "/options/date_disp_mode" to "%x %R"

	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-cmdline.cc:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-main-win.h:
	* src/gnome-cmd-mkdir-dialog.cc: